<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.jdm.menunenaw.ui.location.LocationSearchFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_location_search_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginHorizontal="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/rect_radius_16_e3e3e3"
            app:searchIcon="@drawable/ic_search"
            app:queryHint="@string/location_search_search_bar_hint"
            app:iconifiedByDefault="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_min="@dimen/dp_180"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_location_search_current_pos"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@+id/sv_location_search_bar"
            app:layout_constraintStart_toStartOf="@+id/sv_location_search_bar"
            app:layout_constraintEnd_toEndOf="@+id/sv_location_search_bar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_location_search_current_pos_marker"
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_22"
                android:layout_marginStart="@dimen/dp_10"
                app:srcCompat="@drawable/ic_location_blue"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location_search_current_pos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/black"
                android:text="@string/location_search_current_pos"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_location_search_current_pos_marker" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_10"
                android:rotationY="180"
                app:srcCompat="@drawable/ic_chevron_left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_location_search_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black"
            android:text="@string/location_search_recent"
            app:layout_constraintTop_toBottomOf="@+id/cl_location_search_current_pos" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tv_location_search_result_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_20"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/tv_location_search_recent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>